# bytepiece-rs

./: .gitignore  Cargo.toml  README.md
bench/: Cargo.toml  main.py
bench/src/: main.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/.cargo/: config.toml
bindings/python/.github/workflows/: CI.yml
bindings/python/benches/: benchmark.py  tokenizer_aho.py  tokenizer_jieba.py
bindings/python/rs_bytepiece/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_tokenizer.py
bytepiece_rs/: Cargo.toml  README.md
bytepiece_rs/bench_aho/: Cargo.toml  README.md
bytepiece_rs/bench_aho/src/: main.rs
bytepiece_rs/benches/: bytepiece_benchmark.rs
bytepiece_rs/src/: lib.rs  main.rs
bytepiece_rs/src/tokenizer/: bytepiece.rs  mod.rs  utils.rs
bytepiece_rs/tests/: test_tokenizer.rs
experiment/: tokenizer.py
src/: cli.rs  lib.rs
src/tokenizer/: bytepiece.rs  mod.rs
