[package]
name = "bytepiece_rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.5"
base64 = "0.21.4"
bytes = "1.5.0"
lazy_static = "1.4.0"
regex = "1.9.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.107"
unic-normal = "0.9.0"


[lib]
name = "bytepiece_rs"
path = "src/lib.rs"
crate-type = ["lib"]


[[bin]]
name = "cli"
path = "src/cli.rs"
doc = false
