[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.5"
base64 = "0.21.4"
bytes = "1.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.107"
unic-normal = "0.9.0"
